SSDM-12359: use Character.valueOf factory method instead of deprecated constructor